# kaggle-house-prices

./: .gitignore  README.md  advanced-model.ipynb  experiment-notes.md  index.ipynb  linear-model.ipynb  model.ipynb  pyproject.toml  test-score-gen.ipynb
data/: submission.csv  submission_linear_regression.csv  submission_random_forest.csv  submission_stacking.csv  submission_voting.csv  submission_xgb.csv
